src/parser.output
Terminals which are not used

   NUMBER


State 159 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 NAME: ID

    2 program: program_head routine DOT

    3 program_head: PROGRAM ID SEMI
    4             | /* empty */

    5 routine: routine_head routine_body

    6 sub_routine: routine_head routine_body

    7 routine_head: label_part const_part type_part var_part routine_part

    8 label_part: /* empty */

    9 const_part: CONST const_expr_list
   10           | /* empty */

   11 const_expr_list: const_expr_list NAME EQUAL const_value SEMI
   12                | NAME EQUAL const_value SEMI

   13 const_value: INTEGER
   14            | REAL
   15            | CHAR
   16            | STRING
   17            | SYS_CON

   18 type_part: TYPE type_decl_list
   19          | /* empty */

   20 type_decl_list: type_decl_list type_definition
   21               | type_definition

   22 type_definition: ID EQUAL type_decl SEMI

   23 type_decl: simple_type_decl
   24          | array_type_decl
   25          | record_type_decl

   26 simple_type_decl: SYS_TYPE
   27                 | NAME
   28                 | LP name_list RP
   29                 | const_value DOT DOT const_value
   30                 | MINUS const_value DOT DOT const_value
   31                 | MINUS const_value DOT DOT MINUS const_value
   32                 | NAME DOT DOT NAME

   33 array_type_decl: ARRAY LB simple_type_decl RB OF type_decl

   34 record_type_decl: RECORD field_decl_list END

   35 field_decl_list: field_decl_list field_decl
   36                | field_decl

   37 field_decl: name_list COLON type_decl SEMI

   38 name_list: name_list COMMA ID
   39          | ID

   40 var_part: VAR var_decl_list
   41         | /* empty */

   42 var_decl_list: var_decl_list var_decl
   43              | var_decl

   44 var_decl: name_list COLON type_decl SEMI

   45 routine_part: routine_part function_decl
   46             | routine_part procedure_decl
   47             | /* empty */

   48 function_decl: function_head SEMI sub_routine SEMI

   49 function_head: FUNCTION ID parameters COLON simple_type_decl

   50 procedure_decl: procedure_head SEMI sub_routine SEMI

   51 procedure_head: PROCEDURE ID parameters

   52 parameters: LP para_decl_list RP
   53           | /* empty */

   54 para_decl_list: para_decl_list SEMI para_type_list
   55               | para_type_list

   56 para_type_list: var_para_list COLON simple_type_decl
   57               | val_para_list COLON simple_type_decl

   58 var_para_list: VAR name_list

   59 val_para_list: name_list

   60 routine_body: compound_stmt

   61 compound_stmt: BEGINN stmt_list END

   62 stmt_list: stmt_list stmt
   63          | stmt_list stmt SEMI
   64          | /* empty */

   65 stmt: INTEGER COLON non_label_stmt
   66     | non_label_stmt

   67 non_label_stmt: assign_stmt
   68               | proc_stmt
   69               | compound_stmt
   70               | if_stmt
   71               | repeat_stmt
   72               | while_stmt
   73               | for_stmt
   74               | case_stmt
   75               | goto_stmt

   76 assign_stmt: ID ASSIGN expression
   77            | ID LB expression RB ASSIGN expression
   78            | ID DOT ID ASSIGN expression

   79 proc_stmt: ID
   80          | ID LP args_list RP
   81          | SYS_PROC
   82          | SYS_PROC LP expression_list RP
   83          | READ LP factor RP

   84 if_stmt: IF expression THEN stmt else_clause

   85 else_clause: ELSE stmt
   86            | /* empty */

   87 repeat_stmt: REPEAT stmt_list UNTIL expression

   88 while_stmt: WHILE expression DO stmt

   89 for_stmt: FOR ID ASSIGN expression direction expression DO stmt

   90 direction: TO
   91          | DOWNTO

   92 case_stmt: CASE expression OF case_expr_list END

   93 case_expr_list: case_expr_list case_expr
   94               | case_expr

   95 case_expr: const_value COLON stmt SEMI
   96          | ID COLON stmt SEMI

   97 goto_stmt: GOTO INTEGER

   98 expression_list: expression_list COMMA expression
   99                | expression

  100 expression: expression GE expr
  101           | expression GT expr
  102           | expression LE expr
  103           | expression LT expr
  104           | expression EQUAL expr
  105           | expression UNEQUAL expr
  106           | expr

  107 expr: expr PLUS term
  108     | expr MINUS term
  109     | expr OR term
  110     | term

  111 term: term MUL factor
  112     | term DIV factor
  113     | term MOD factor
  114     | term AND factor
  115     | factor

  116 factor: NAME
  117       | NAME LP args_list RP
  118       | SYS_FUNCT SYS_FUNCT LP args_list RP
  119       | const_value
  120       | LP expression RP
  121       | NOT factor
  122       | MINUS factor
  123       | ID LB expression RB
  124       | ID DOT ID

  125 args_list: args_list COMMA expression
  126          | expression


Terminals, with rules where they appear

$end (0) 0
error (256)
PROGRAM (258) 3
ID (259) 1 3 22 38 39 49 51 76 77 78 79 80 89 96 123 124
DOT (260) 2 29 30 31 32 78 124
EQUAL (261) 11 12 22 104
LT (262) 103
LE (263) 102
GT (264) 101
GE (265) 100
PLUS (266) 107
MINUS (267) 30 31 108 122
MUL (268) 111
DIV (269) 112
RP (270) 28 52 80 82 83 117 118 120
LP (271) 28 52 80 82 83 117 118 120
ASSIGN (272) 76 77 78 89
COLON (273) 37 44 49 56 57 65 95 96
COMMA (274) 38 98 125
SEMI (275) 3 11 12 22 37 44 48 50 54 63 95 96
IF (276) 84
THEN (277) 84
ELSE (278) 85
WHILE (279) 88
DO (280) 88 89
BEGINN (281) 61
END (282) 34 61 92
CASE (283) 92
DOWNTO (284) 91
FOR (285) 89
GOTO (286) 97
INTEGER (287) 13 65 97
LB (288) 33 77 123
RB (289) 33 77 123
NOT (290) 121
OR (291) 109
AND (292) 114
MOD (293) 113
OF (294) 33 92
READ (295) 83
REPEAT (296) 87
TO (297) 90
UNEQUAL (298) 105
UNTIL (299) 87
NUMBER (300)
SYS_CON (301) 17
SYS_FUNCT (302) 118
SYS_PROC (303) 81 82
SYS_TYPE (304) 26
CHAR (305) 15
CONST (306) 9
STRING (307) 16
REAL (308) 14
ARRAY (309) 33
VAR (310) 40 58
PROCEDURE (311) 51
RECORD (312) 34
FUNCTION (313) 49
TYPE (314) 18


Nonterminals, with rules where they appear

$accept (60)
    on left: 0
NAME (61)
    on left: 1, on right: 11 12 27 32 116 117
program (62)
    on left: 2, on right: 0
program_head (63)
    on left: 3 4, on right: 2
routine (64)
    on left: 5, on right: 2
sub_routine (65)
    on left: 6, on right: 48 50
routine_head (66)
    on left: 7, on right: 5 6
label_part (67)
    on left: 8, on right: 7
const_part (68)
    on left: 9 10, on right: 7
const_expr_list (69)
    on left: 11 12, on right: 9 11
const_value (70)
    on left: 13 14 15 16 17, on right: 11 12 29 30 31 95 119
type_part (71)
    on left: 18 19, on right: 7
type_decl_list (72)
    on left: 20 21, on right: 18 20
type_definition (73)
    on left: 22, on right: 20 21
type_decl (74)
    on left: 23 24 25, on right: 22 33 37 44
simple_type_decl (75)
    on left: 26 27 28 29 30 31 32, on right: 23 33 49 56 57
array_type_decl (76)
    on left: 33, on right: 24
record_type_decl (77)
    on left: 34, on right: 25
field_decl_list (78)
    on left: 35 36, on right: 34 35
field_decl (79)
    on left: 37, on right: 35 36
name_list (80)
    on left: 38 39, on right: 28 37 38 44 58 59
var_part (81)
    on left: 40 41, on right: 7
var_decl_list (82)
    on left: 42 43, on right: 40 42
var_decl (83)
    on left: 44, on right: 42 43
routine_part (84)
    on left: 45 46 47, on right: 7 45 46
function_decl (85)
    on left: 48, on right: 45
function_head (86)
    on left: 49, on right: 48
procedure_decl (87)
    on left: 50, on right: 46
procedure_head (88)
    on left: 51, on right: 50
parameters (89)
    on left: 52 53, on right: 49 51
para_decl_list (90)
    on left: 54 55, on right: 52 54
para_type_list (91)
    on left: 56 57, on right: 54 55
var_para_list (92)
    on left: 58, on right: 56
val_para_list (93)
    on left: 59, on right: 57
routine_body (94)
    on left: 60, on right: 5 6
compound_stmt (95)
    on left: 61, on right: 60 69
stmt_list (96)
    on left: 62 63 64, on right: 61 62 63 87
stmt (97)
    on left: 65 66, on right: 62 63 84 85 88 89 95 96
non_label_stmt (98)
    on left: 67 68 69 70 71 72 73 74 75, on right: 65 66
assign_stmt (99)
    on left: 76 77 78, on right: 67
proc_stmt (100)
    on left: 79 80 81 82 83, on right: 68
if_stmt (101)
    on left: 84, on right: 70
else_clause (102)
    on left: 85 86, on right: 84
repeat_stmt (103)
    on left: 87, on right: 71
while_stmt (104)
    on left: 88, on right: 72
for_stmt (105)
    on left: 89, on right: 73
direction (106)
    on left: 90 91, on right: 89
case_stmt (107)
    on left: 92, on right: 74
case_expr_list (108)
    on left: 93 94, on right: 92 93
case_expr (109)
    on left: 95 96, on right: 93 94
goto_stmt (110)
    on left: 97, on right: 75
expression_list (111)
    on left: 98 99, on right: 82 98
expression (112)
    on left: 100 101 102 103 104 105 106, on right: 76 77 78 84 87
    88 89 92 98 99 100 101 102 103 104 105 120 123 125 126
expr (113)
    on left: 107 108 109 110, on right: 100 101 102 103 104 105 106
    107 108 109
term (114)
    on left: 111 112 113 114 115, on right: 107 108 109 110 111 112
    113 114
factor (115)
    on left: 116 117 118 119 120 121 122 123 124, on right: 83 111
    112 113 114 115 121 122
args_list (116)
    on left: 125 126, on right: 80 117 118 125


state 0

    0 $accept: . program $end

    PROGRAM  shift, and go to state 1

    $default  reduce using rule 4 (program_head)

    program       go to state 2
    program_head  go to state 3


state 1

    3 program_head: PROGRAM . ID SEMI

    ID  shift, and go to state 4


state 2

    0 $accept: program . $end

    $end  shift, and go to state 5


state 3

    2 program: program_head . routine DOT

    $default  reduce using rule 8 (label_part)

    routine       go to state 6
    routine_head  go to state 7
    label_part    go to state 8


state 4

    3 program_head: PROGRAM ID . SEMI

    SEMI  shift, and go to state 9


state 5

    0 $accept: program $end .

    $default  accept


state 6

    2 program: program_head routine . DOT

    DOT  shift, and go to state 10


state 7

    5 routine: routine_head . routine_body

    BEGINN  shift, and go to state 11

    routine_body   go to state 12
    compound_stmt  go to state 13


state 8

    7 routine_head: label_part . const_part type_part var_part routine_part

    CONST  shift, and go to state 14

    $default  reduce using rule 10 (const_part)

    const_part  go to state 15


state 9

    3 program_head: PROGRAM ID SEMI .

    $default  reduce using rule 3 (program_head)


state 10

    2 program: program_head routine DOT .

    $default  reduce using rule 2 (program)


state 11

   61 compound_stmt: BEGINN . stmt_list END

    $default  reduce using rule 64 (stmt_list)

    stmt_list  go to state 16


state 12

    5 routine: routine_head routine_body .

    $default  reduce using rule 5 (routine)


state 13

   60 routine_body: compound_stmt .

    $default  reduce using rule 60 (routine_body)


state 14

    9 const_part: CONST . const_expr_list

    ID  shift, and go to state 17

    NAME             go to state 18
    const_expr_list  go to state 19


state 15

    7 routine_head: label_part const_part . type_part var_part routine_part

    TYPE  shift, and go to state 20

    $default  reduce using rule 19 (type_part)

    type_part  go to state 21


state 16

   61 compound_stmt: BEGINN stmt_list . END
   62 stmt_list: stmt_list . stmt
   63          | stmt_list . stmt SEMI

    ID        shift, and go to state 22
    IF        shift, and go to state 23
    WHILE     shift, and go to state 24
    BEGINN    shift, and go to state 11
    END       shift, and go to state 25
    CASE      shift, and go to state 26
    FOR       shift, and go to state 27
    GOTO      shift, and go to state 28
    INTEGER   shift, and go to state 29
    READ      shift, and go to state 30
    REPEAT    shift, and go to state 31
    SYS_PROC  shift, and go to state 32

    compound_stmt   go to state 33
    stmt            go to state 34
    non_label_stmt  go to state 35
    assign_stmt     go to state 36
    proc_stmt       go to state 37
    if_stmt         go to state 38
    repeat_stmt     go to state 39
    while_stmt      go to state 40
    for_stmt        go to state 41
    case_stmt       go to state 42
    goto_stmt       go to state 43


state 17

    1 NAME: ID .

    $default  reduce using rule 1 (NAME)


state 18

   12 const_expr_list: NAME . EQUAL const_value SEMI

    EQUAL  shift, and go to state 44


state 19

    9 const_part: CONST const_expr_list .
   11 const_expr_list: const_expr_list . NAME EQUAL const_value SEMI

    ID  shift, and go to state 17

    $default  reduce using rule 9 (const_part)

    NAME  go to state 45


state 20

   18 type_part: TYPE . type_decl_list

    ID  shift, and go to state 46

    type_decl_list   go to state 47
    type_definition  go to state 48


state 21

    7 routine_head: label_part const_part type_part . var_part routine_part

    VAR  shift, and go to state 49

    $default  reduce using rule 41 (var_part)

    var_part  go to state 50


state 22

   76 assign_stmt: ID . ASSIGN expression
   77            | ID . LB expression RB ASSIGN expression
   78            | ID . DOT ID ASSIGN expression
   79 proc_stmt: ID .
   80          | ID . LP args_list RP

    DOT     shift, and go to state 51
    LP      shift, and go to state 52
    ASSIGN  shift, and go to state 53
    LB      shift, and go to state 54

    $default  reduce using rule 79 (proc_stmt)


state 23

   84 if_stmt: IF . expression THEN stmt else_clause

    ID         shift, and go to state 55
    MINUS      shift, and go to state 56
    LP         shift, and go to state 57
    INTEGER    shift, and go to state 58
    NOT        shift, and go to state 59
    SYS_CON    shift, and go to state 60
    SYS_FUNCT  shift, and go to state 61
    CHAR       shift, and go to state 62
    STRING     shift, and go to state 63
    REAL       shift, and go to state 64

    NAME         go to state 65
    const_value  go to state 66
    expression   go to state 67
    expr         go to state 68
    term         go to state 69
    factor       go to state 70


state 24

   88 while_stmt: WHILE . expression DO stmt
